syntax = "proto3";

package cms;
option go_package="./services";

service ContentManagementService {
  rpc FindOne (ContentById) returns (Content) {}
  rpc FindAll (ContentById) returns (Content) {}
}

message ContentById {
  int32 id = 1;
}

message Content {
  int32 id = 1;
  string name = 2;
}